# gtc

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  k8s-deployment.yml  package-lock.json  package.json  webpack.config.js
data/: gtc.tsv  parsed.txt
node_src/: index.jsx
src/: main.rs
