[package]
name = "gtc"
version = "1.0.0"
authors = ["Garth Ilsley <ilsley@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = {version = "0.4.6", default-features = false, features = ["serve"]}
csv = "1.1"
serde = { version = "1", features = ["derive"] }